# AMR-VSA25

./: .gitignore  README.md  model_config.json  pyproject.toml
Examples/: amr_fasta_dataset_with_fcgr.csv  amr_fasta_dataset_with_kmers.csv
Examples/models/: amr_model.keras  fcgr1_model.keras
docs/presentation/: RP_Slides-3.ipynb
exports/models/: VSA-25-DNN-KMER-model4_9686-150ep-RESEARCH-1748229736.032842.keras  VSA-25-DNN-KMER-model4_9686-200ep-RESEARCH-1748229736.032842.keras  VSA-25-DNN-KMER-model4_9686-300ep-RESEARCH-1748229736.032842.keras  VSA-25-DNN-KMER-model4_9686-400ep-RESEARCH-1748229736.032842.keras  VSA-25-DNN-KMER-model5_6075-150ep-RESEARCH-1748229736.032842.keras  VSA-25-DNN-KMER-model5_6075-200ep-RESEARCH-1748229736.032842.keras  VSA-25-DNN-KMER-model5_6075-300ep-RESEARCH-1748229736.032842.keras  VSA-25-DNN-KMER-model5_6075-400ep-RESEARCH-1748229736.032842.keras
exports/reports/: analytics_1748229736.032842.csv
notebooks/: amr_model.h5  cnn_pipeline.ipynb  dnn_pipeline.ipynb  preprocessing_pipelines.ipynb
src/models/: cnn_model.py  dnn_model.py
src/pipeline/: run_pipeline.py  utils.py
src/preprocessing/: fcgr_dataset.py  kmer_and_features_dataset.py  labels_dataset.py  utils.py
src/training/: evaluate_model.py  train_models.py
src/visualization/: plots.py
